# ComfyUI_Stem_Mixer

./: README.md  __init__.py  pyproject.toml
comfyui_stemmixer/: server.py
comfyui_stemmixer/nodes/: audio_stem_mixer.py  effects.py
web/: stem_effects.js  stem_mixer.js
