[project]
name = "ComfyUI-Stem-Mixer"
description = "Multitrack stem mixer node. Load stems directly into the node, mix with faders/mute/solo, preview in real time, and produce a final mix on workflow execution."
version = "1.5.3"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Stem_Mixer"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "ComfyUI-Stem-Mixer"
Icon = ""
