[project]
name = "ComfyUI-Stem-Mixer"
description = "Multitrack stem mixer node. Load stems directly into the node, add multi effects per track, mix with faders/mute/solo, preview in real time, and produce a final mix on workflow execution."
version = "2.0.0"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Stem_Mixer"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "ComfyUI-Stem-Mixer"
Icon = ""
